<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpFirstActivity">


    <TextView
        android:id="@+id/userNameTextViews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_textview"
        android:layout_marginLeft="100px"
        android:layout_marginTop="400px"
        android:textColor="@color/colorBlack" />

    <EditText
        android:id="@+id/usernameText"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100px"
        android:layout_marginTop="450px"
        android:ems="10"
        android:hint="@string/enter_your_username"
        />


    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_password_textview"
        android:layout_marginLeft="100px"
        android:layout_marginTop="600px"
        android:textColor="@color/colorBlack"
        />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100px"
        android:layout_marginTop="650px"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/enter_password"/>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="600px"
        android:layout_height="200px"
        android:text="@string/next"
        android:layout_marginLeft="250px"
        android:layout_marginTop="1120px"
        android:background="@color/colorGreen"
        />

    <TextView
        android:id="@+id/SignupTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_textview"
        android:textSize="80px"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200px"
        android:textColor="@color/colorBlack"/>

</RelativeLayout>