<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModifyUserProfileActivity">

    <EditText
        android:id="@+id/editHeightText"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="116dp" />

    <EditText
        android:id="@+id/editWaistText"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="188dp" />

    <TextView
        android:id="@+id/heightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height_textview"
        android:textColor="@color/colorBlack"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="97dp" />

    <TextView
        android:id="@+id/waistTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/waist_textview"
        android:textColor="@color/colorBlack"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="169dp" />

    <TextView
        android:id="@+id/tutorialTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tutorial_textview"
        android:textColor="@color/colorPrimary"
        tools:layout_editor_absoluteX="255dp"
        tools:layout_editor_absoluteY="244dp" />

    <TextView
        android:id="@+id/pushupTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pushup_textview"
        android:textColor="@color/colorBlack"

        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="244dp" />

    <TextView
        android:id="@+id/situpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/situp_textview"
        android:textColor="@color/colorBlack"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="318dp" />

    <TextView
        android:id="@+id/tutorial2TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tutorial_textview"
        android:textColor="@color/colorPrimary"
        tools:layout_editor_absoluteX="255dp"
        tools:layout_editor_absoluteY="318dp" />

    <EditText
        android:id="@+id/situpEditText"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="337dp" />

    <TextView
        android:id="@+id/frequencyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frequency_textview"
        android:textColor="@color/colorBlack"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="389dp" />

    <EditText
        android:id="@+id/frequencyEditText"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="408dp" />

    <EditText
        android:id="@+id/editPushupText"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="263dp" />

    <fragment
        android:id="@+id/fragment"
        android:name="com.comp231_s5g4.instabod.VideoUserProfileFragment"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        tools:layout_editor_absoluteX="-35dp"
        tools:layout_editor_absoluteY="574dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="600px"
        android:layout_height="200px"
        android:background="@color/colorGreen"
        android:text="@string/modify_button"
        tools:layout_editor_absoluteX="91dp"
        tools:layout_editor_absoluteY="470dp" />

    <TextView
        android:id="@+id/userProfileTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modify_user_profile_textview"
        android:textColor="@color/colorBlack"
        android:textSize="80px"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>