<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGreen"
    tools:context=".DaysFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/day1_textview"
        android:layout_width="49dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:text="@string/day1_textview"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/day1Name_textview"
        android:layout_width="49dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/day1Name_textview"
        android:textSize="16sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/day1Reps_textview"
        android:layout_width="49dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/day1Reps_textview"
        android:textSize="16sp"
        android:textStyle="normal" />

</FrameLayout>