<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <TextView
        android:id="@+id/enterUserNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_textview"
        android:layout_marginLeft="100px"
        android:layout_marginTop="400px"
        android:textColor="@color/colorBlack" />

    <EditText
        android:id="@+id/usernameText"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100px"
        android:layout_marginTop="450px"
        android:ems="10"
        android:hint="Enter your username" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="600px"
        android:layout_height="200px"
        android:text="@string/next_button"
        android:layout_marginLeft="250px"
        android:layout_marginTop="800px"
        android:textSize="25dp"
        android:textColor="@android:color/white"
        android:onClick="resetNext"
        android:background="@color/colorGreen"/>

    <TextView
        android:id="@+id/forgotPasswordView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="80px"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200px"
        android:textColor="@color/colorBlack"/>
</RelativeLayout>