<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordTwoActivity">

    <TextView
        android:id="@+id/securityQuestion1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/security_question_1"
        android:layout_marginLeft="100px"
        android:layout_marginTop="400px"
        android:textColor="@color/colorBlack" />

    <EditText
    android:id="@+id/securityAnswer1Text"
    android:layout_width="335dp"
    android:layout_height="wrap_content"
    android:layout_marginLeft="100px"
    android:layout_marginTop="600px"
    android:ems="10"
    android:hint="Enter Answer 1"/>

    <EditText
        android:id="@+id/securityQuestion1Text"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100px"
        android:layout_marginTop="450px"
        android:ems="10"
        android:hint="Security Question 1"
        android:focusable="false"
        android:clickable="false" />

    <Button
        android:id="@+id/resetPasswordButton"
        android:layout_width="600px"
        android:layout_height="200px"
        android:text="@string/reset"
        android:layout_marginLeft="250px"
        android:layout_marginTop="1450px"
        android:textSize="25dp"
        android:textColor="@android:color/white"
        android:onClick="resetPassword"
        android:background="@color/colorGreen" />

    <EditText
        android:id="@+id/securityQuestion2Text"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100px"
        android:layout_marginTop="850px"
        android:ems="10"
        android:hint="Security Question 2"
        android:focusable="false"
        android:clickable="false" />

    <EditText
        android:id="@+id/securityAnswer2Text"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100px"
        android:layout_marginTop="1000px"
        android:ems="10"
        android:hint="Enter Answer 2"/>

    <TextView
        android:id="@+id/securityQuestion2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/security_question_2"
        android:layout_marginLeft="100px"
        android:layout_marginTop="800px"
        android:textColor="@color/colorBlack" />

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_password"
        android:layout_marginLeft="100px"
        android:layout_marginTop="1200px"
        android:textColor="@color/colorBlack" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100px"
        android:layout_marginTop="1250px"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="Enter Password"/>

    <TextView
        android:id="@+id/forgotPasswordView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="80px"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200px"
        android:textColor="@color/colorBlack"/>
</RelativeLayout>