<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray"
    tools:context=".FitnessInformationFragment">

    <TextView
        android:id="@+id/fitnessinformation_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/fitnessinformation_textview"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/RFM_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="60dp"
        android:text="@string/RFM_textview"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/rfmValue_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="78dp"
        android:layout_marginTop="60dp"
        android:hint="RFM Score"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/pushup_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="90dp"
        android:text="@string/pushups_textview"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/pushupScore_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="78dp"
        android:layout_marginTop="90dp"
        android:textColor="@color/colorBlack"
        android:hint="Push Score"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/situps_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="120dp"
        android:text="@string/situps_textview"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/situpScore_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="78dp"
        android:layout_marginTop="120dp"
        android:textColor="@color/colorBlack"
        android:hint="SitUp Score"
        android:textSize="14sp"
        android:textStyle="bold" />

</FrameLayout>